--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.shadow-colored {
+  --tw-shadow-color: 33, 36, 48;
+  box-shadow: 0 1px 10px rgba(var(--tw-shadow-color), 0.1),
+    0 1px 2px rgba(var(--tw-shadow-color), 0.06),
+    0 10px 20px -5px rgba(var(--tw-shadow-color), 0.1),
+    0 20px 25px -5px rgba(var(--tw-shadow-color), 0.1);
+}
