adding ask echo to marketing page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,3 +9,7 @@
     0 10px 20px -5px rgba(var(--tw-shadow-color), 0.1),
     0 20px 25px -5px rgba(var(--tw-shadow-color), 0.1);
 }
+
+.ask-echo {
+  cursor: pointer;
+}
